alignment fixed

--- a/client/src/Css/Home.css
+++ b/client/src/Css/Home.css
@@ -236,6 +236,7 @@ body::-webkit-scrollbar {
   color: #d9a057;
   font-weight: 200;
   font-family: "Quicksand", sans-serif;
+  font-size: xx-large;
 }
 .wording-cont p {
   margin-top: 5px;
@@ -243,7 +244,7 @@ body::-webkit-scrollbar {
 }
 .missions {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   padding: 35px 0 0 0;
 }
 .mission {
@@ -252,13 +253,16 @@ body::-webkit-scrollbar {
   border: 3px solid #d9a057;
   border-radius: 10px;
   text-align: center;
-  padding: 10px 5px;
+  padding: 30px;
   background: #fff;
+  margin-left: 40px;
 }
 .mission h2 {
-  font-weight: 400;
+  font-weight: 600;
   font-size: x-large;
   margin-bottom: 10px;
+  font-family: "Quicksand", sans-serif;
+  color: black;
 }
 
 .count {
@@ -643,7 +647,7 @@ body::-webkit-scrollbar {
 }
 .subscribe {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
   background: #f5f5f5;
   height: 350px;
   align-items: center;
@@ -663,13 +667,17 @@ body::-webkit-scrollbar {
 .subscribe-text h2,
 p {
   color: #757575;
+  font-family: "Quicksand", sans-serif;
 }
+
 .subscribe-text p {
   margin-left: 40px;
   margin-bottom: 25px;
+  font-family: "Quicksand", sans-serif;
 }
 .subscribe-text h2 {
   margin-bottom: 0;
+  font-family: "Quicksand", sans-serif;
 }
 .search-bar input[type="text"] {
   background: #f0bf4b;
@@ -702,15 +710,19 @@ p {
   }
 }
 .feedback {
-  background: #fff;
+  background: transparent;
   text-align: center;
 }
 .feedback h1 {
   color: #757575;
+  font-family: "Quicksand", sans-serif;
+}
+.feedback h3 {
+  font-family: "Quicksand", sans-serif;
 }
 .feedback-items {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
   margin: 30px 0;
 }
 .feedback-item {
@@ -723,7 +735,8 @@ p {
   border-radius: 10px;
   padding: 30px;
   position: relative;
-
+  background: #fff;
+  margin-left: 40px;
   /* Add the box shadow styles */
   box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.2);
 }
@@ -821,6 +834,7 @@ p {
 .name {
   color: #757575;
   margin-top: 20px;
+  font-family: "Quicksand", sans-serif;
 }
 .name-course {
   font-weight: 300;
@@ -828,6 +842,7 @@ p {
   color: #c8c8c8;
 }
 .feedback-item p {
+  font-family: "Quicksand", sans-serif;
   font-size: small;
 }
 @media (min-width: 768px) and (max-width: 1023px) {
@@ -851,6 +866,7 @@ p {
   .feedback-item {
     width: 80%;
     margin-bottom: 10px;
+    margin-left: 0;
   }
   .feedback-item:hover .triangle1,
   .feedback-item:hover .plus,
